--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:main_card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.example.shubham.idolsandhya.MainActivity">
 
     <FrameLayout
@@ -15,24 +16,57 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <EditText
-            android:id="@+id/count"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btnSendSMS"
-            android:layout_centerHorizontal="true"
-            android:hint="HOW MANY SMS?"
-            android:phoneNumber="true" />
+            android:id="@+id/main_card_view"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            main_card_view:cardBackgroundColor="#cecdcc"
+            main_card_view:cardCornerRadius="12dp"
+            main_card_view:cardElevation="3dp"
+            main_card_view:contentPadding="4dp"
+            android:foreground="?selectableItemBackground">
 
-        <Button
-            android:id="@+id/btnSendSMS"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="48dp"
-            android:text="Send Sms" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
 
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/count"
+                        android:layout_gravity="center"
+                        android:layout_width="200dp"
+                        android:layout_height="100dp"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="20dp"
+                        android:hint="@string/edittext_hint"
+                        android:phoneNumber="true" />
+                </android.support.design.widget.TextInputLayout>
 
+                <Button
+                    android:id="@+id/btnSendSMS"
+                    android:layout_width="150dp"
+                    android:layout_height="65dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="125dp"
+                    android:textSize="20dp"
+                    android:text="Send Sms" />
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+        <LinearLayout
+            android:id="@+id/blurBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/sandhya"
+            android:alpha="0.1"
+            android:orientation="vertical">
+        </LinearLayout>
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
@@ -42,5 +76,6 @@
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation" />
+
 
 </LinearLayout>
