--- a/app/src/main/res/layout/social_bak.xml
+++ b/app/src/main/res/layout/social_bak.xml
@@ -15,10 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,20 +30,49 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="16dp" >
 
-                <fragment
-                    android:id="@+id/youtube_player_fragment"
-                    android:name="com.google.android.youtube.player.YouTubePlayerFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/item_image"
+                    android:src="@drawable/sandhya"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="32dp"
+                    />
 
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/item_image11"
+                    android:src="@drawable/sandhya"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="48dp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/item_title"
+                    android:layout_toRightOf="@+id/item_image"
+                    android:layout_alignParentTop="true"
+                    android:textSize="30sp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/item_detail"
+                    android:layout_toRightOf="@+id/item_image"
+                    android:layout_below="@+id/item_title"
+                    />
 
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
-
     </FrameLayout>
 
 
