Videos section added with recycler view and title is extracted from Json parsing

--- a/app/src/main/res/layout/social.xml
+++ b/app/src/main/res/layout/social.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view1="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,47 +16,54 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-        <android.support.v7.widget.CardView
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/parent_relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/card_view"
-            android:layout_margin="5dp"
-            card_view:cardBackgroundColor="#000000"
-            card_view:cardCornerRadius="12dp"
-            card_view:cardElevation="3dp"
-            card_view:contentPadding="4dp"
-            android:foreground="?selectableItemBackground"
-            android:clickable="true">
+            android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="16dp" >
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                card_view:cardBackgroundColor="@android:color/black"
+                card_view:cardCornerRadius="5dp"
+                card_view:cardElevation="0dp"
+                card_view:cardPreventCornerOverlap="false"
+                card_view:cardUseCompatPadding="true">
 
-                <fragment
-                    android:id="@+id/youtube_player_fragment"
-                    android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+
+                <com.google.android.youtube.player.YouTubeThumbnailView
+                    android:id="@+id/youtube_thumbnail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="170dp"
+                    android:scaleType="centerCrop"
+                    android:visibility="visible" />
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout_over_youtube_thumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:background="@color/colorPrimaryDark"
+                    android:visibility="visible">
+
+                    <ImageView
+                        android:id="@+id/btnYoutube_player"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="center"
+                        android:src="@mipmap/ic_youtube_play_button" />
+
+                </RelativeLayout>
 
 
-            </RelativeLayout>
+            </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
+        </LinearLayout>
 
     </FrameLayout>
 
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
 
 </LinearLayout>
