--- a/app/src/main/res/layout/recycler_main.xml
+++ b/app/src/main/res/layout/recycler_main.xml
@@ -6,21 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.shubham.idolsandhya.socialActivity">
-
+    tools:context="com.example.shubham.idolsandhya.RecyclerActivity">
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="2">
+
+        <ListView
+            android:id="@+id/lists"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
 
 
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/list"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
 
     </FrameLayout>
 
