--- a/app/src/main/res/layout/social_bak.xml
+++ b/app/src/main/res/layout/social_bak.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view1="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,65 +15,100 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
-        <android.support.v7.widget.CardView
+
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/card_view"
-            android:layout_margin="5dp"
-            card_view:cardBackgroundColor="#000000"
-            card_view:cardCornerRadius="12dp"
-            card_view:cardElevation="3dp"
-            card_view:contentPadding="4dp"
-            android:foreground="?selectableItemBackground"
-            android:clickable="true">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp" >
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/item_image"
-                    android:src="@drawable/sandhya"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="32dp"
-                    />
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/item_image11"
-                    android:src="@drawable/sandhya"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="48dp"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/item_title"
-                    android:layout_toRightOf="@+id/item_image"
-                    android:layout_alignParentTop="true"
-                    android:textSize="30sp"
-                    />
+                    android:layout_margin="6dp"
+                    card_view:cardBackgroundColor="#9aaaaa"
+                    card_view:cardCornerRadius="12dp"
+                    card_view:cardElevation="3dp"
+                    card_view:contentPadding="4dp"
+                    android:foreground="?selectableItemBackground">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="16dp" >
+
+                        <fragment
+                            android:id="@+id/youtube_player_fragment"
+                            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/item_detail"
-                    android:layout_toRightOf="@+id/item_image"
-                    android:layout_below="@+id/item_title"
-                    />
+                    android:layout_margin="6dp"
+                    card_view:cardBackgroundColor="#9bbbbb"
+                    card_view:cardCornerRadius="12dp"
+                    card_view:cardElevation="3dp"
+                    card_view:contentPadding="4dp"
+                    android:foreground="?selectableItemBackground">
 
-            </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="16dp"
+                        android:orientation="vertical">
+                        <fragment
+                            android:id="@+id/youtube_player_fragment1"
+                            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="6dp"
+                    card_view:cardBackgroundColor="#9bbbbb"
+                    card_view:cardCornerRadius="12dp"
+                    card_view:cardElevation="3dp"
+                    card_view:contentPadding="4dp"
+                    android:foreground="?selectableItemBackground">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="16dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="This is test shubham!"/>
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
     </FrameLayout>
 
 
